--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,9 @@ services:
       - POSTGRES_PASSWORD=postgres_password
   redis: 
     image: 'redis:latest'
-  server: 
+  api: 
+    depends_on:
+      - postgres
     build: 
       dockerfile: Dockerfile.dev
       context: ./server
@@ -22,6 +24,9 @@ services:
       - PGPASSWORD=postgres_password
       - PGPORT=5432
   client:
+    depends_on:
+      - api
+    stdin_open: true
     build: 
       dockerfile: Dockerfile.dev
       context: ./client
@@ -29,9 +34,26 @@ services:
       - /app/node_modules
       - ./client:/app
   worker:
+    depends_on:
+      - redis
     build: 
       dockerfile: Dockerfile.dev
       context: ./worker
     volumes: 
       - /app/node_modules
       - ./worker:/app
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+  nginx: 
+    depends_on:
+      - api
+      - client
+    restart: always
+    build: 
+      dockerfile: Dockerfile.dev
+      context: ./nginx
+    ports: 
+      - '3050:80'
+
+
